text overflow fix in blogs

--- a/styles.css
+++ b/styles.css
@@ -401,13 +401,19 @@ p {
     min-width: 70%;
     overflow: scroll;
     padding: 10px;
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
   .main {
     outline: 2px solid #796755;
     min-height: 0vh;
     min-width: 70%;
     padding: 20px;
-  }
+  } 
+
+
 
   .arrow {
     display: none;
